tests/snapshots/snapshot_tests__random_board_snapshot_185.snap
---
source: tests/snapshot_tests.rs
expression: "(minions, recording)"
---
- ? idx: 1
    version: 1
  : Annoy-o-Tron
  ? idx: 2
    version: 1
  : Golden Champion of the Primus
  ? idx: 3
    version: 1
  : Golden Amalgadon
  ? idx: 4
    version: 1
  : Golden Iron Sensei
  ? idx: 5
    version: 1
  : Golden Majordomo Executus
  ? idx: 6
    version: 1
  : Mind Muck
  ? idx: 7
    version: 1
  : Soul Rewinder
  ? idx: 8
    version: 1
  : Low-Flier
  ? idx: 9
    version: 1
  : General Drakkisath
  ? idx: 10
    version: 1
  : Golden Snake
  ? idx: 11
    version: 1
  : Niuzao
  ? idx: 12
    version: 1
  : Golden Twilight Emissary
  ? idx: 13
    version: 1
  : Golden Bream Counter
  ? idx: 14
    version: 1
  : Golden Red Whelp
- - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 12
        version: 1
      amount: 1
      source:
        idx: 1
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - AfterAttack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 1
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 1
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 1
        version: 1
      amount: 4
      source:
        idx: 2
        version: 1
  - TakeDamage:
      target:
        idx: 2
        version: 1
      amount: 1
      source:
        idx: 1
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 1
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 1
        version: 1
  - AfterAttack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 1
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 12
        version: 1
      amount: 12
      source:
        idx: 3
        version: 1
  - TakeDamage:
      target:
        idx: 3
        version: 1
      amount: 6
      source:
        idx: 12
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 12
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 12
        version: 1
  - AfterAttack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 7
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 7
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 7
        version: 1
      amount: 4
      source:
        idx: 4
        version: 1
  - TakeDamage:
      target:
        idx: 4
        version: 1
      amount: 3
      source:
        idx: 7
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 7
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 7
        version: 1
  - AfterAttack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 7
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 5
        version: 1
      defender:
        idx: 2
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 5
        version: 1
      defender:
        idx: 2
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 2
        version: 1
      amount: 12
      source:
        idx: 5
        version: 1
  - TakeDamage:
      target:
        idx: 5
        version: 1
      amount: 4
      source:
        idx: 2
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - AfterAttack:
      attacker:
        idx: 5
        version: 1
      defender:
        idx: 2
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 6
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 6
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 9
        version: 1
      amount: 3
      source:
        idx: 6
        version: 1
  - TakeDamage:
      target:
        idx: 6
        version: 1
      amount: 2
      source:
        idx: 9
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 6
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 6
        version: 1
  - AfterAttack:
      attacker:
        idx: 6
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 8
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 8
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 8
        version: 1
      amount: 2
      source:
        idx: 9
        version: 1
  - TakeDamage:
      target:
        idx: 9
        version: 1
      amount: 3
      source:
        idx: 8
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 8
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 8
        version: 1
  - AfterAttack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 8
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 10
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 10
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 11
        version: 1
      amount: 2
      source:
        idx: 10
        version: 1
  - TakeDamage:
      target:
        idx: 10
        version: 1
      amount: 6
      source:
        idx: 11
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 10
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 10
        version: 1
  - AfterAttack:
      attacker:
        idx: 10
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 11
        version: 1
      defender:
        idx: 4
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 11
        version: 1
      defender:
        idx: 4
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 4
        version: 1
      amount: 6
      source:
        idx: 11
        version: 1
  - TakeDamage:
      target:
        idx: 11
        version: 1
      amount: 4
      source:
        idx: 4
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 4
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 4
        version: 1
  - Death:
      minion:
        idx: 11
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 11
        version: 1
  - AfterAttack:
      attacker:
        idx: 11
        version: 1
      defender:
        idx: 4
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 9
        version: 1
      amount: 4
      source:
        idx: 14
        version: 1
  - TakeDamage:
      target:
        idx: 14
        version: 1
      amount: 2
      source:
        idx: 9
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 9
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 9
        version: 1
  - AfterAttack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 13
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 13
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 14
        version: 1
      amount: 10
      source:
        idx: 13
        version: 1
  - TakeDamage:
      target:
        idx: 13
        version: 1
      amount: 4
      source:
        idx: 14
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 14
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 14
        version: 1
  - AfterAttack:
      attacker:
        idx: 13
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 3
        version: 1
      amount: 4
      source:
        idx: 2
        version: 1
  - TakeDamage:
      target:
        idx: 2
        version: 1
      amount: 12
      source:
        idx: 3
        version: 1
  - AuraUpdate: ~
  - DeathCheck: ~
  - Death:
      minion:
        idx: 2
        version: 1
      source:
        idx: 4294967295
        version: 1
  - Remove:
      minion:
        idx: 2
        version: 1
  - AfterAttack:
      attacker:
        idx: 2
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - AuraUpdate: ~
  - DeathCheck: ~
  - End: BottomWin

